--- a/daily/20260102/心情日记260102.md
+++ b/daily/20260102/心情日记260102.md
@@ -1,5 +1,4 @@
-test
-关于我的打靶上司错误使用git导致的问题
+关于我的打靶上司错误使用git导致我这个git菜鸟不断学习如何补锅的职场生活
 人物:我、同事小w、打靶领导
 1. 分支A编写了A功能
 2. 提交分支A到test分支
@@ -11,4 +10,4 @@ test
 8. 打靶领导：你去看一下代码看看功能A有没有问题
 9. 小w说：功能A调用的方法不存在，我直接在test分支注释掉代码了。
 10. 打靶领导：你去从新弄一下吧。再合并
-11. 我：我tm头都大了，我哪弄过这种东西啊
+11. 我：我tm头都大了，我哪弄过这种东西啊?
